--- a/client/src/ChatView/ChatView.module.css
+++ b/client/src/ChatView/ChatView.module.css
@@ -1,7 +1,7 @@
 .Chat {
   display: grid;
   grid-template-columns: 80px auto;
-  grid-template-rows: 40px auto 50px; 
+  grid-template-rows: 40px calc(100% - 90px) 50px; 
   grid-template-areas: 
         "chats header"
         "chats content"
@@ -15,6 +15,23 @@
   grid-area: chats;
   height: 100%;
   background-color:#2f3542;
+}
+.chatList {
+  padding: 12px;
+  height: 100%;
+  box-sizing: border-box;
+}
+.chatCard {
+  font-size: 1.25em;
+  background-color: #ECF0F1;
+  width: calc(80px - 24px);
+  height: calc(80px - 24px);
+  margin-top: 12px;
+  border-radius: 8px;
+  color: #000000;
+}
+.chatCard:first-child {
+  margin-top: 60px;
 }
 
 .header {
@@ -41,16 +58,62 @@
   font-size: 0.8em;
   color: #747d8c;
 }
-.leaveChannel {
+.leaveChannel, .settings {
   height: 26px          !important;
   line-height:  26px    !important;
-  float: right;
   color: #ffffff      !important;
+  margin-left: 10px     !important;
+  margin-right: 10px    !important;
 }
 
 .content {
   grid-area: content;
   background-color: #ffffff; 
+  align-items: flex-end;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-end;
+  padding: 20px;
+  overflow-y: scroll;
+  box-shadow: 
+    inset 0px 11px 8px -10px #CCC,
+    inset 0px -11px 8px -10px #CCC;
+}
+.contentWrapper {
+  height: 100%;
+  width: 100%;
+}
+.content p {
+  display: inline-block;
+  padding: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 12px;
+  color: #ffffff;
+  margin: 0;
+}
+.chatBubbleLeft, .chatBubbleRight {
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+}
+.chatBubbleRight {
+  justify-content: flex-end;
+}
+.chatBubbleLeft p {
+  background-color: #ff6348;
+  margin-left: 10px;
+}
+.chatBubbleRight p {
+  background-color: #ff7f50;
+  margin-right: 10px;
+}
+.img {
+  height: 34px;
+  width: auto;
+  border-radius: 50px;
 }
 
 .input {
@@ -60,7 +123,14 @@
   padding-right: 20px;
 }
 .textField {
-  width: 100%     !important;
+  width: calc(100% - 120px)     !important;
+}
+.send {
+  width: 100px          !important;
+  height: 26px          !important;
+  line-height:  26px    !important;
+  color: #ffffff      !important;
+  margin-left: 20px     !important;
 }
 
 .title {
