--- a/client/src/Login/Login.module.css
+++ b/client/src/Login/Login.module.css
@@ -1,9 +1,13 @@
 .Login {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
 .title {
-  font-size: 1.5em;
+  margin-top: 0;
 }
 
 .subtitle {
