--- a/client/src/ChannelView/ChannelView.module.css
+++ b/client/src/ChannelView/ChannelView.module.css
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: bold;
 }
 .channelCard p {
   font-weight: bold;
