--- a/client/src/ChannelView/ChannelTextBubble.module.css
+++ b/client/src/ChannelView/ChannelTextBubble.module.css
@@ -4,6 +4,8 @@
     margin-bottom: 5px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+    flex-direction: row-reverse;
   }
   .channelBubbleLeft p {
     background-color: #ff6348;
