--- a/client/src/ChannelView/ChannelView.module.css
+++ b/client/src/ChannelView/ChannelView.module.css
@@ -1,37 +1,45 @@
-.Chat {
+.Channel {
   display: grid;
   grid-template-columns: 80px auto;
   grid-template-rows: 40px calc(100% - 90px) 50px; 
   grid-template-areas: 
-        "chats header"
-        "chats content"
-        "chats input";
+        "channels header"
+        "channels content"
+        "channels input";
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
-.chats {
-  grid-area: chats;
+.channels {
+  grid-area: channels;
   height: 100%;
-  background-color:#2f3542;
+  background-color:#2ecc71;
 }
-.chatList {
+.channelList {
   padding: 12px;
   height: 100%;
   box-sizing: border-box;
 }
-.chatCard {
+.channelList a {
+  text-decoration: none;
+}
+.channelCard {
   font-size: 1.25em;
   background-color: #ECF0F1;
   width: calc(80px - 24px);
   height: calc(80px - 24px);
   margin-top: 12px;
-  border-radius: 8px;
+  border-radius: 50px;
   color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
-.chatCard:first-child {
-  margin-top: 60px;
+.channelCard p {
+  font-weight: bold;
+  margin: 0;
 }
 
 .header {
@@ -61,7 +69,6 @@
 .leaveChannel, .settings {
   height: 26px          !important;
   line-height:  26px    !important;
-  color: #ffffff      !important;
   margin-left: 10px     !important;
   margin-right: 10px    !important;
 }
@@ -76,8 +83,8 @@
   padding: 20px;
   overflow-y: scroll;
   box-shadow: 
-    inset 0px 11px 8px -10px #CCC,
-    inset 0px -11px 8px -10px #CCC;
+    inset 10px 11px 8px -10px #CCC,
+    inset 10px -11px 8px -10px #CCC;
 }
 .contentWrapper {
   height: 100%;
@@ -92,29 +99,6 @@
   color: #ffffff;
   margin: 0;
 }
-.chatBubbleLeft, .chatBubbleRight {
-  width: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  display: flex;
-  align-items: center;
-}
-.chatBubbleRight {
-  justify-content: flex-end;
-}
-.chatBubbleLeft p {
-  background-color: #ff6348;
-  margin-left: 10px;
-}
-.chatBubbleRight p {
-  background-color: #ff7f50;
-  margin-right: 10px;
-}
-.img {
-  height: 34px;
-  width: auto;
-  border-radius: 50px;
-}
 
 .input {
   grid-area: input;
@@ -127,9 +111,8 @@
 }
 .send {
   width: 100px          !important;
-  height: 26px          !important;
+  height: 100%          !important;
   line-height:  26px    !important;
-  color: #ffffff      !important;
   margin-left: 20px     !important;
 }
 
@@ -137,6 +120,6 @@
   font-size: 1.5em;
 }
 
-.chatView {
+.channelView {
   
 }
