--- a/client/src/Loading/Loading.module.css
+++ b/client/src/Loading/Loading.module.css
@@ -1,4 +1,4 @@
-.Login {
+.Loading {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -6,14 +6,6 @@
   text-align: center;
 }
 
-.title {
-  margin-top: 0;
-}
-
 .subtitle {
   font-size: 1.25em;
-}
-
-.button {
-  font-size: large;
 }
