--- a/client/src/ChannelView/ChannelTextBubble.module.css
+++ b/client/src/ChannelView/ChannelTextBubble.module.css
@@ -29,5 +29,8 @@
     height: 34px;
     width: auto;
     border-radius: 50px;
-    margin: 0.2em 0.5em;    
+    margin: 0.2em 0.5em;
+  }
+  img {
+    max-height: 180px;
   }
