--- a/client/src/ChannelView/ChannelView.module.css
+++ b/client/src/ChannelView/ChannelView.module.css
@@ -39,6 +39,7 @@
   width: calc(80px - 24px);
   height: calc(80px - 24px);
   margin-top: 12px;
+  color: black;
   border-radius: 50px;
   display: flex;
   align-items: center;
