--- a/client/src/ChannelSettings/ChannelSettings.module.css
+++ b/client/src/ChannelSettings/ChannelSettings.module.css
@@ -1,4 +1,5 @@
 .ChannelSettings {
+  margin: 50px;
   text-align: center;
 }
 
@@ -7,13 +8,35 @@
 }
 
 .colorGrid {
-
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .colorCard {
-
+  width: 150px;
+  height: 150px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .saveButton {
   font-size: large;
+  margin-top: 25px      !important;
+}
+
+.textField input {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.generateNameButton {
+  width: 100%;
 }
