--- a/client/src/ChannelView/ChannelView.module.css
+++ b/client/src/ChannelView/ChannelView.module.css
@@ -14,15 +14,24 @@
 .channels {
   grid-area: channels;
   height: 100%;
-  background-color:#2ecc71;
+  overflow: hidden;
 }
 .channelList {
   padding: 12px;
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
+.channelList::-webkit-scrollbar {
+  display: none;
+ }
 .channelList a {
   text-decoration: none;
+  padding: 0 !important;
+}
+.channelList a span {
+  color: #000000 !important;
 }
 .channelCard {
   font-size: 1.25em;
@@ -30,8 +39,8 @@
   width: calc(80px - 24px);
   height: calc(80px - 24px);
   margin-top: 12px;
+  color: black;
   border-radius: 50px;
-  color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
